--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   },
   "dependencies": {
     "next": "13.4.3",
+    "next-transpile-modules": "^10.0.0",
+    "onnxruntime-web": "^1.15.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "worker-loader": "^3.0.8"
   }
 }
